// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Institution name: NYU renders NYU page correctly 1`] = `
<DocumentFragment>
  <nav
    class="color-nav navbar navbar-expand-lg navbar-light"
    role="banner"
  >
    <div
      class="container"
    >
      <div
        class="me-auto navbar-nav"
        role="navigation"
      >
        <a
          aria-label="nyu home"
          class="nav-link"
          data-rr-ui-event-key="https://library.nyu.edu"
          href="https://library.nyu.edu"
        >
          <img
            alt="NYU Libraries homepage"
            class="image"
            height="60"
            src="https://cdn.library.nyu.edu/images/nyulibraries-logo.svg"
            width="220"
          />
        </a>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Institution name: NYUAD renders NYUAD page correctly 1`] = `
<DocumentFragment>
  <nav
    class="color-nav navbar navbar-expand-lg navbar-light"
    role="banner"
  >
    <div
      class="container"
    >
      <div
        class="me-auto navbar-nav"
        role="navigation"
      >
        <a
          aria-label="nyuad home"
          class="nav-link"
          data-rr-ui-event-key="https://nyuad.nyu.edu/en/library.html"
          href="https://nyuad.nyu.edu/en/library.html"
        >
          <img
            alt="NYU Abu Dhabi Library homepage"
            class="image white-bg"
            height="60"
            src="/images/abudhabi-logo-color.svg"
            width="220"
          />
        </a>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Institution name: NYUSH renders NYUSH page correctly 1`] = `
<DocumentFragment>
  <nav
    class="color-nav navbar navbar-expand-lg navbar-light"
    role="banner"
  >
    <div
      class="container"
    >
      <div
        class="me-auto navbar-nav"
        role="navigation"
      >
        <a
          aria-label="nyush home"
          class="nav-link"
          data-rr-ui-event-key="https://shanghai.nyu.edu/academics/library"
          href="https://shanghai.nyu.edu/academics/library"
        >
          <img
            alt="NYU Shanghai Library homepage"
            class="image white-bg"
            height="60"
            src="/images/shanghai-logo-color.svg"
            width="220"
          />
        </a>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;
